parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> var_assign
Rule 3     calc -> empty
Rule 4     var_assign -> NAME EQUALS expression
Rule 5     expression -> NAME
Rule 6     empty -> <empty>
Rule 7     expression -> expression MULTIPLY expression
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> expression PLUS expression
Rule 10    expression -> expression MINUS expression
Rule 11    expression -> INT
Rule 12    expression -> FLOAT

Terminals, with rules where they appear

DIVIDE               : 8
EQUALS               : 4
FLOAT                : 12
INT                  : 11
MINUS                : 10
MULTIPLY             : 7
NAME                 : 4 5
PLUS                 : 9
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 3
expression           : 1 4 7 7 8 8 9 9 10 10
var_assign           : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . var_assign
    (3) calc -> . empty
    (5) expression -> . NAME
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . INT
    (12) expression -> . FLOAT
    (4) var_assign -> . NAME EQUALS expression
    (6) empty -> .

    NAME            shift and go to state 5
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    $end            reduce using rule 6 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    var_assign                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression

    $end            reduce using rule 1 (calc -> expression .)
    MULTIPLY        shift and go to state 8
    DIVIDE          shift and go to state 9
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11


state 3

    (2) calc -> var_assign .

    $end            reduce using rule 2 (calc -> var_assign .)


state 4

    (3) calc -> empty .

    $end            reduce using rule 3 (calc -> empty .)


state 5

    (5) expression -> NAME .
    (4) var_assign -> NAME . EQUALS expression

    MULTIPLY        reduce using rule 5 (expression -> NAME .)
    DIVIDE          reduce using rule 5 (expression -> NAME .)
    PLUS            reduce using rule 5 (expression -> NAME .)
    MINUS           reduce using rule 5 (expression -> NAME .)
    $end            reduce using rule 5 (expression -> NAME .)
    EQUALS          shift and go to state 12


state 6

    (11) expression -> INT .

    MULTIPLY        reduce using rule 11 (expression -> INT .)
    DIVIDE          reduce using rule 11 (expression -> INT .)
    PLUS            reduce using rule 11 (expression -> INT .)
    MINUS           reduce using rule 11 (expression -> INT .)
    $end            reduce using rule 11 (expression -> INT .)


state 7

    (12) expression -> FLOAT .

    MULTIPLY        reduce using rule 12 (expression -> FLOAT .)
    DIVIDE          reduce using rule 12 (expression -> FLOAT .)
    PLUS            reduce using rule 12 (expression -> FLOAT .)
    MINUS           reduce using rule 12 (expression -> FLOAT .)
    $end            reduce using rule 12 (expression -> FLOAT .)


state 8

    (7) expression -> expression MULTIPLY . expression
    (5) expression -> . NAME
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . INT
    (12) expression -> . FLOAT

    NAME            shift and go to state 14
    INT             shift and go to state 6
    FLOAT           shift and go to state 7

    expression                     shift and go to state 13

state 9

    (8) expression -> expression DIVIDE . expression
    (5) expression -> . NAME
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . INT
    (12) expression -> . FLOAT

    NAME            shift and go to state 14
    INT             shift and go to state 6
    FLOAT           shift and go to state 7

    expression                     shift and go to state 15

state 10

    (9) expression -> expression PLUS . expression
    (5) expression -> . NAME
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . INT
    (12) expression -> . FLOAT

    NAME            shift and go to state 14
    INT             shift and go to state 6
    FLOAT           shift and go to state 7

    expression                     shift and go to state 16

state 11

    (10) expression -> expression MINUS . expression
    (5) expression -> . NAME
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . INT
    (12) expression -> . FLOAT

    NAME            shift and go to state 14
    INT             shift and go to state 6
    FLOAT           shift and go to state 7

    expression                     shift and go to state 17

state 12

    (4) var_assign -> NAME EQUALS . expression
    (5) expression -> . NAME
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . INT
    (12) expression -> . FLOAT

    NAME            shift and go to state 14
    INT             shift and go to state 6
    FLOAT           shift and go to state 7

    expression                     shift and go to state 18

state 13

    (7) expression -> expression MULTIPLY expression .
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression

    MULTIPLY        reduce using rule 7 (expression -> expression MULTIPLY expression .)
    DIVIDE          reduce using rule 7 (expression -> expression MULTIPLY expression .)
    PLUS            reduce using rule 7 (expression -> expression MULTIPLY expression .)
    MINUS           reduce using rule 7 (expression -> expression MULTIPLY expression .)
    $end            reduce using rule 7 (expression -> expression MULTIPLY expression .)

  ! MULTIPLY        [ shift and go to state 8 ]
  ! DIVIDE          [ shift and go to state 9 ]
  ! PLUS            [ shift and go to state 10 ]
  ! MINUS           [ shift and go to state 11 ]


state 14

    (5) expression -> NAME .

    MULTIPLY        reduce using rule 5 (expression -> NAME .)
    DIVIDE          reduce using rule 5 (expression -> NAME .)
    PLUS            reduce using rule 5 (expression -> NAME .)
    MINUS           reduce using rule 5 (expression -> NAME .)
    $end            reduce using rule 5 (expression -> NAME .)


state 15

    (8) expression -> expression DIVIDE expression .
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression

    MULTIPLY        reduce using rule 8 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 8 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 8 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 8 (expression -> expression DIVIDE expression .)
    $end            reduce using rule 8 (expression -> expression DIVIDE expression .)

  ! MULTIPLY        [ shift and go to state 8 ]
  ! DIVIDE          [ shift and go to state 9 ]
  ! PLUS            [ shift and go to state 10 ]
  ! MINUS           [ shift and go to state 11 ]


state 16

    (9) expression -> expression PLUS expression .
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression

    PLUS            reduce using rule 9 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 9 (expression -> expression PLUS expression .)
    $end            reduce using rule 9 (expression -> expression PLUS expression .)
    MULTIPLY        shift and go to state 8
    DIVIDE          shift and go to state 9

  ! MULTIPLY        [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 10 ]
  ! MINUS           [ shift and go to state 11 ]


state 17

    (10) expression -> expression MINUS expression .
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression

    PLUS            reduce using rule 10 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 10 (expression -> expression MINUS expression .)
    $end            reduce using rule 10 (expression -> expression MINUS expression .)
    MULTIPLY        shift and go to state 8
    DIVIDE          shift and go to state 9

  ! MULTIPLY        [ reduce using rule 10 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 10 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 10 ]
  ! MINUS           [ shift and go to state 11 ]


state 18

    (4) var_assign -> NAME EQUALS expression .
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression

    $end            reduce using rule 4 (var_assign -> NAME EQUALS expression .)
    MULTIPLY        shift and go to state 8
    DIVIDE          shift and go to state 9
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11

